--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,8 @@
-{% extends 'base.html'}
+{% extends "base.html" %}
 
 {% block content %}
 <h1>Signup</h1>
-<form method="post">
+<form action="/signup" method="post">
     <table>
         <tr>
             <td><label for="username">Username</label></td>
